// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toInsertScript basic use returns a parenthesized value expression 1`] = `
"
INSERT INTO foods
(event_date, name, satisfaction)
VALUES
('2022-01-01', 'hotdogs', 1), ('2022-01-02', 'chimichangas', 100), ('2022-01-03', 'pizza', NULL);"
`;

exports[`toInsertScript nested query use returns a parenthesized value expression with a nested query based on the options 1`] = `
"
INSERT INTO foods
(event_date, name, satisfaction)
VALUES
((select id from atnd_event_date where event_date = '2022-01-01'), 'hotdogs', 1), ((select id from atnd_event_date where event_date = '2022-01-02'), 'chimichangas', 100), ((select id from atnd_event_date where event_date = '2022-01-03'), 'pizza', NULL);"
`;
